# pico-mac-dvi

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
incbin/: System Installation.img  Write Paint.img  umac-disc.h  umac-rom.h
include/: hw.h  menu.h  video.h
src/: hid.c  main.c  menu.c  video.c
